--- a/kubernetes/backstage.yaml
+++ b/kubernetes/backstage.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: backstage
-          image: backstage:1.0.0
+          image: isthisdeanclark/backstage:1.0.2
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
